<resources>
    <string name="app_name">ProjectAndroidX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_product">Prodcut</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="login_email">Email</string>
    <string name="login_number">Number</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>

</resources>