<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_mobile_screen"
            android:title="@string/menu_product" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart_shopping"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_detail"
            android:icon="@drawable/ic_detail"
            android:title="@string/menu_detail" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_id_card"
            android:title="@string/menu_register" />

    </group>
</menu>