<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectandroidx.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.example.projectandroidx.ui.detail.DetailFragment"
        android:label="home1"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_nav_detail_to_nav_cart"
            app:destination="@id/nav_cart" />
    </fragment>


    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.projectandroidx.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_nav_cart_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.projectandroidx.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
    </fragment>
    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.projectandroidx.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_nav_register_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.projectandroidx.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_nav_product_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>
</navigation>